z-index fix

--- a/src/style.scss
+++ b/src/style.scss
@@ -253,12 +253,13 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  position: fixed;
+  position: fixed !important;
   top: 0;
   left: 0;
   width: 100%;
   height: 60px;
-  background: $color-black;
+  background: $color-black !important;
+  z-index: 1;
 }
 #navbar-brand {
   font-family: $font-family-raleway;
